--- a/menu.html
+++ b/menu.html
@@ -131,19 +131,193 @@
 			</div>
 			<div class="modal-body">
 				<div id="catagory_A" class="options d-none">
-					<!-- 從這裡開始複製 -->
 					<div class="form-group">
-						<input type="checkbox" id="checkbox1" name="checkbox1" value="加蛋">
-						<label for="checkbox1">加蛋</label>
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加蛋 +5">
+					<label for="checkbox1">加蛋</label>
 					</div>
-					<!-- 這樣算一組 -->
+					<div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加起司 +10">
+					<label for="checkbox1">加起司 +10</label>
+					</div>
+					<div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加薯餅 +15">
+					<label for="checkbox1">加薯餅 +15</label>
+					</div>
+					<div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加肉排 +30">
+					<label for="checkbox1">加肉排 +30</label>
+					</div>
+					<div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加燻雞 +30">
+					<label for="checkbox1">加燻雞 +30</label>
+					</div>
+					<div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加火腿 +15">
+					<label for="checkbox1">加火腿 +15</label>
+					</div>
+					<div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加培根 +15">
+					<label for="checkbox1">加培根 +15</label>
+					</div>
+					<div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="不要醬">
+					<label for="checkbox1">不要醬</label>
+					</div>
 				</div>
-				<div id="catagory_B" class="options d-none"></div>
-				<div id="catagory_C" class="options d-none"></div>
-				<div id="catagory_D" class="options d-none"></div>
-				<div id="catagory_E" class="options d-none"></div>
-				<div id="catagory_F" class="options d-none"></div>
+				<div id="catagory_B" class="options d-none">
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加蛋 +5">
+					<label for="checkbox1">加蛋</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加起司 +10">
+					<label for="checkbox1">加起司 +10</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加薯餅 +15">
+					<label for="checkbox1">加薯餅 +15</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加肉排 +30">
+					<label for="checkbox1">加肉排 +30</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加燻雞 +30">
+					<label for="checkbox1">加燻雞 +30</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加火腿 +15">
+					<label for="checkbox1">加火腿 +15</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加培根 +15">
+					<label for="checkbox1">加培根 +15</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加玉米 +10">
+					<label for="checkbox1">加玉米 +10</label>
+				</div>
+				</div>
+			   <div id="catagory_C" class="options d-none">
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加蛋 +5">
+					<label for="checkbox1">加蛋 +5</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加起司 +10">
+					<label for="checkbox1">加起司 +10</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="去邊">
+					<label for="checkbox1">去邊</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加薯餅 +15">
+					<label for="checkbox1">加薯餅 +15</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加肉排 +30">
+					<label for="checkbox1">加肉排 +30</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加燻雞 +30">
+					<label for="checkbox1">加燻雞 +30</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加火腿 +15">
+					<label for="checkbox1">加火腿 +15</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加培根 +15">
+					<label for="checkbox1">加培根 +15</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加玉米 +10">
+					<label for="checkbox1">加玉米 +10</label>
+				 </div>
+			   </div>
+			   <div id="catagory_D" class="options d-none">
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加蛋 +5">
+					<label for="checkbox1">加蛋 +5</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加起司 +10">
+					<label for="checkbox1">加起司 +10</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="去邊">
+					<label for="checkbox1">去邊</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加薯餅 +15">
+					<label for="checkbox1">加薯餅 +15</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加肉排 +30">
+					<label for="checkbox1">加肉排 +30</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加燻雞 +30">
+					<label for="checkbox1">加燻雞 +30</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加火腿 +15">
+					<label for="checkbox1">加火腿 +15</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加培根 +15">
+					<label for="checkbox1">加培根 +15</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加玉米 +10">
+					<label for="checkbox1">加玉米 +10</label>
+				 </div>
+				</div>
+			   <div id="catagory_E" class="options d-none">
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加半熟蛋 +20">
+					<label for="checkbox1">加半熟蛋 +20</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加全熟蛋 +20">
+					<label for="checkbox1">加全熟蛋 +20</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加半份麵 +30">
+					<label for="checkbox1">加半份麵 +30</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="加整份麵 +35">
+					<label for="checkbox1">加整份麵 +35</label>
+			   </div>
 			</div>
+			   <div id="catagory_G" class="options d-none">
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="冰飲">
+					<label for="checkbox1">冰飲</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="熱飲">
+					<label for="checkbox1">熱飲</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="正常糖">
+					<label for="checkbox1">正常糖</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="半糖">
+					<label for="checkbox1">半糖</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="微糖">
+					<label for="checkbox1">微糖</label>
+				 </div>
+				 <div class="form-group">
+					<input type="checkbox" id="ckeckbox1" name="checkbox1" value="無糖">
+					<label for="checkbox1">無糖</label>
+				 </div>
+			   </div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary btn-close" data-bs-dismiss="modal">Close</button>
 				<button type="button" class="addCart btn btn-primary">加入購物車</button>
@@ -254,15 +428,24 @@
 
 			// get option checked in category
 			let options = "";
+			let option_price = 0;
 			$('#catagory_' + category).find('input[type="checkbox"]').each(function() {
 				if ($(this).is(':checked'))
 				{
 					options += $(this).val() + ',';
+					var numb = $(this).val().match(/\d/g);
+					numb = numb.join("");
+					option_price += parseInt(numb);
 				}
 			});
 
 			const restaurant_name = $('#restaurant_name').text();
+			if (restaurant_name != localStorage.getItem('restaurant_name'))
+			{
+				localStorage.removeItem('cart');
+			}
 			localStorage.setItem('restaurant_name', restaurant_name);
+
 
 			// add to local storage
 			let cart = JSON.parse(localStorage.getItem('cart'));
@@ -270,23 +453,24 @@
 			{
 				cart = [];
 			}
-			else
-			{
-				for (const i in cart) {
-					if (cart[i].id == id && cart[i].name == name && cart[i].options == options)
-					{
-						cart[i].quantity++;
-						localStorage.setItem('cart', JSON.stringify(cart));
-						return;
-					}
-				}
-			}
+			// else
+			// {
+			// 	for (const i in cart) {
+			// 		if (cart[i].id == id && cart[i].name == name && cart[i].options == options)
+			// 		{
+			// 			cart[i].quantity++;
+			// 			localStorage.setItem('cart', JSON.stringify(cart));
+			// 			return;
+			// 		}
+			// 	}
+			// }
 			cart.push({
 				'id': id,
 				'name': name,
 				'price': price,
 				'quantity': 1,
 				'options': options,
+				'option_price': option_price,
 			});
 			localStorage.setItem('cart', JSON.stringify(cart));
 			$("#categoryModal").modal('hide');
