--- a/cart.html
+++ b/cart.html
@@ -146,7 +146,7 @@
 		for(const i in cart)
 		{
 			const item = cart[i];
-			totalPrice += item.price * item.quantity;
+			totalPrice += (item.price * item.quantity) + parseFloat(item.option_price);
 			totalQuantity += item.quantity;
 			$('#cart').append(`
 				<tr>
