--- a/cart.html
+++ b/cart.html
@@ -81,13 +81,13 @@
 					<div class="form-group">
 						<label for="pickup_time">取餐時間</label>
 						<select class="form-control" id="pickup_time">
-							<option value="0800">早上 8 點</option>
-							<option value="0900">早上 9 點</option>
-							<option value="1000">早上 10 點</option>
-							<option value="1100">早上 11 點</option>
+							<option value="0800">上午 8 點</option>
+							<option value="0900">上午 9 點</option>
+							<option value="1000">上午 10 點</option>
+							<option value="1100">上午 11 點</option>
 							<option value="1200">中午 12 點</option>
-							<option value="1300">中午 1 點</option>
-							<option value="1400">中午 2 點</option>
+							<option value="1300">下午 1 點</option>
+							<option value="1400">下午 2 點</option>
 						</select>
 					</div>
 				</div>
