--- a/cart.html
+++ b/cart.html
@@ -167,6 +167,13 @@
 		$('#totalQuantity').text(totalQuantity);
 	}
 
+	$('#phone').on('input', function() {
+		if (this.value.length > 10)
+		{
+			this.value = this.value.slice(0,10); 
+		}
+	});
+
 	function submitOrder()
 	{
 		const cart = JSON.parse(localStorage.getItem('cart'));
@@ -174,7 +181,7 @@
 		const time = $('#pickup_time').val();
 		const name = $('#name').val();
 		const phone = $('#phone').val();
-		if (name == '' || phone == '')
+		if (name == '' || phone == '' || length(phone) != 10)
 		{
 			$('#submitModalLabel').text('請輸入取餐人姓名及電話');
 			$('#submitModal').modal('show');
