--- a/cart.html
+++ b/cart.html
@@ -181,9 +181,9 @@
 		const time = $('#pickup_time').val();
 		const name = $('#name').val();
 		const phone = $('#phone').val();
-		if (name == '' || phone == '' || length(phone) != 10)
+		if (name == '' || phone == '' || phone.length != 10)
 		{
-			$('#submitModalLabel').text('請輸入取餐人姓名及電話');
+			$('#submitModalLabel').text('請輸入取餐人姓名及正確的電話');
 			$('#submitModal').modal('show');
 			return;
 		}
@@ -195,7 +195,7 @@
 			'cart': cart,
 			'time': time
 		};
-		console.log(data);
+		// console.log(data);
 		$.ajax({
 			url: 'backend/order.php',
 			method: 'POST',
