--- a/menu.html
+++ b/menu.html
@@ -57,13 +57,13 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img class="d-block w-100" src="./image/banner.png" alt="First slide">
+						<img class="d-block w-100" src="./image/banner_1.jpg" alt="First slide">
 					</div>
 					<div class="carousel-item">
-						<img class="d-block w-100" src="./image/banner.png" alt="Second slide">
+						<img class="d-block w-100" src="./image/banner_2.jpg" alt="Second slide">
 					</div>
 					<div class="carousel-item">
-						<img class="d-block w-100" src="./image/banner.png" alt="Third slide">
+						<img class="d-block w-100" src="./image/banner_3.jpg" alt="Third slide">
 					</div>
 					<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
 						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
